added android sln file

--- a/Socks.Android/Socks.Android.csproj
+++ b/Socks.Android/Socks.Android.csproj
@@ -82,6 +82,125 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
+    <AndroidResource Include="Resources\drawable\But_minus_.png" />
+    <AndroidResource Include="Resources\drawable\But_plus_.png" />
+    <AndroidResource Include="Resources\drawable\But_reset.png" />
+    <AndroidResource Include="Resources\drawable\icon.png" />
+    <AndroidResource Include="Resources\drawable\startpage_0008_Nosok41_45.png" />
+    <AndroidResource Include="Resources\drawable\startpage_0011_Nosok31_35.png" />
+    <AndroidResource Include="Resources\drawable\startpage_0012_Nosok25_30.png" />
+    <AndroidResource Include="Resources\drawable\startpage_0013_Nosok35_40.png" />
+    <AndroidResource Include="Resources\drawable\startpage_bg.png" />
+    <AndroidResource Include="Resources\drawable\woman_000_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_001_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_002_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_003_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_004_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_005_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_006_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_007_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_008_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_009_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_010_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_011_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_012_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_013_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\woman_014_Nosok.png" />
+    <AndroidResource Include="Resources\drawable\launchscreen.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\But_minus.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\But_plus.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\launchscreen.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\startpage_0008_Nosok41_45.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\startpage_0011_Nosok31_35.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\startpage_0012_Nosok25_30.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\startpage_0013_Nosok35_40.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\startpage_bg.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_000_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_000_Nosok_.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_001_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_002_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_003_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_006_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_007_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_008_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_009_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_010_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_011_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_012_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_013_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\woman_014_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\But_minus.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\But_plus.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\But_reset.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\launchscreen.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\startpage_0008_Nosok41_45.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\startpage_0011_Nosok31_35.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\startpage_0012_Nosok25_30.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\startpage_0013_Nosok35_40.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\startpage_bg.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_000_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_001_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_002_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_003_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_004_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_005_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_006_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_007_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_008_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_009_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_010_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_011_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_012_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_013_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\woman_014_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\launchscreen.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\startpage_0008_Nosok41_45.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\startpage_0011_Nosok31_35.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\startpage_0012_Nosok25_30.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\startpage_0013_Nosok35_40.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\startpage_bg.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_000_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_001_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_002_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_003_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_004_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_005_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_006_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_007_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_008_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_009_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_010_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_011_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_012_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_013_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\woman_014_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\But_minus.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\But_plus.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\launchscreen.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\startpage_0008_Nosok41_45.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\startpage_0011_Nosok31_35.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\startpage_0012_Nosok25_30.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\startpage_0013_Nosok35_40.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\startpage_bg.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_000_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_001_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_002_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_003_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_004_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_005_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_006_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_007_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_008_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_009_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_010_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_011_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_012_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_013_Nosok.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\woman_014_Nosok.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
